--- a/src/App.css
+++ b/src/App.css
@@ -8,11 +8,10 @@ body {
   text-align: center;
   position: relative;
 }
-
-.App-logo {
-  height: 80px;
+/* HOME STYLES */
+.home {
+  margin-top: 30px;
 }
-
 /* DEMO STYLES */
 .nav {
   padding: 30px 0;
